# docstring-to-markdown

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: classes_docstring2md.mmd  packages_docstring2md.mmd  todo.md
docstring2md/: __about__.py  __config__.py  __init__.py  ast_engine.py  ast_version.py  cli.py  convmd.py  doc2md.py  docstring2md.py  docstring2md.py.old  file.py  log.py  logging.yaml  main.py  mod.py  module.py  objdef.py
example/: README.md  classes.mmd  packages.mmd
src/docstring2md/: __about__.py  __config__.py  __init__.py  ast_engine.py  cli.py  convmd.py  doc2md.py  file.py  log.py  mod.py  py.typed
stubs/docstring2md/: __config__.pyi  __init__.pyi  ast_engine.pyi  cli.pyi  convmd.pyi  doc2md.pyi  file.pyi  log.pyi  mod.pyi
stubs/src/docstring2md/: __about__.pyi  __config__.pyi  __init__.pyi  ast_engine.pyi  cli.pyi  convmd.pyi  doc2md.pyi  file.pyi  log.pyi  mod.pyi
tests/: README.md  test_docstring2md.py  test_doctest.py  test_pycodestyle.py
