[metadata]
name = docstring2md
version = 0.3.2
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = Docstring extractor to generate readme.
description-file = file: README.md
python_requires = >=3.5
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/docstring2md
download_url = https://github.com/francois-le-ko4la/docstring2md.git
license = GPL

[files]
packages = docstring2md
include_package_data = True
extra_files = LICENSE
              README.md

[options]
zip_safe = True
scripts = bin/export_docstring2md.py
test_suite = tests.*
install_requires = docstring2md
	           pycodestyle>=2.3.1
	           setuptools>=39.0.1
		   python_version >= "3.5"
setup_requires = pytest-runner

[options.package_data]
* = *.yml

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
