[metadata]
name = docstring2md
version = 0.4.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = Docstring extractor to generate readme.
long_description = file: README.md
long_description_content_type="text/markdown"
python_requires = >=3.6
requires-dist = setuptools
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/python-ping
download_url = https://github.com/francois-le-ko4la/python-ping.git
license = GPL
extra_files =
        LICENSE
        docstring2md/logging.yaml

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests.*
install_requires =
        setuptools>=39.0.1
        pycodestyle>=2.3.1
	wheel>=0.31.1
        PyYAML>=3.12
setup_requires = pytest-runner

[options.entry_points]
console_scripts =
        export_docstring2md.py = docstring2md.cli:run

[aliases]
test=pytest
release = sdist bdist_wheel

[tool:pytest]
addopts = --verbose
